fix: css 수정/ display none 중복 합치기 및 visible 클래스 추가

--- a/가승연소개/gsy.css
+++ b/가승연소개/gsy.css
@@ -1,73 +1,70 @@
 body {
-    font-family: 'GmarketSansMedium', sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f8f8f8;
-    font-size: 1.5rem;
-}
-h1, h2 {
-    color: #222;
-    font-weight: bold;
-}
-.profile-image {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid #fff;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-}
-.container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
-}
-.profile-info {
-    margin-left: 30px;
-    display: none;
-}
-ul {
-    list-style: none;
-    padding: 0;
-}
-li {
-    margin-bottom: 10px;
-}
-a {
-    color: #007bff;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-.emoji { 
-    font-size: 1.2em;
+  font-family: "GmarketSansMedium", sans-serif;
+  margin: 0;
+  padding: 20px;
+  background-color: #f8f8f8;
+  font-size: 1.5rem;
 }
 
-.playlist {
-    display: none;
+h1,
+h2 {
+  color: #222;
+  font-weight: bold;
+}
+
+.profile-image {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 5px solid #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.profile-info {
+  margin-left: 30px;
+}
+ul {
+  list-style: none;
+  padding: 0;
+}
+li {
+  margin-bottom: 10px;
+}
+
+a {
+  color: #007bff;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+.emoji {
+  font-size: 1.2em;
 }
 
 div.main {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;    
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
 }
 
-
-.movie {
-    display: none;
-}
-
-.menu {
-    display: none;
-}
-
-.hobby {
-    display: none;
-}
-
+.profile-info,
+.playlist,
+.movie,
+.menu,
+.hobby,
 .tmi {
-    display: none;
+  display: none;
+}
+
+.visible {
+  display: block;
 }
